[gd_scene load_steps=13 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://images/ui/screen_wide_button_selected.png" type="Texture" id=2]
[ext_resource path="res://images/ui/check_button.png" type="Texture" id=3]
[ext_resource path="res://fonts/alagard.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/item_display/ItemDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/ui/screen_wide_button.png" type="Texture" id=6]
[ext_resource path="res://images/ui/screen_wide_button_pushed.png" type="Texture" id=7]
[ext_resource path="res://images/ui/screen_wide_button_hover.png" type="Texture" id=8]
[ext_resource path="res://screens/reward_menu/RewardMenu.gd" type="Script" id=9]
[ext_resource path="res://images/ui/check_button_hover.png" type="Texture" id=10]
[ext_resource path="res://images/ui/check_button_pressed.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="RewardMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="BackgroundPanel" type="Panel" parent="."]
margin_right = 64.0
margin_bottom = 64.0
theme = ExtResource( 1 )

[node name="ChooseLabel" type="Label" parent="BackgroundPanel"]
margin_left = 2.0
margin_top = 1.0
margin_right = 81.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "CHOOSE!"

[node name="ItemOneButton" type="TextureButton" parent="BackgroundPanel"]
unique_name_in_owner = true
margin_top = 16.0
margin_right = 64.0
margin_bottom = 32.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 2 )

[node name="ItemOneDisplay" parent="BackgroundPanel/ItemOneButton" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 3.0
margin_right = -52.0
margin_bottom = -3.0
mouse_filter = 1

[node name="ItemTwoButton" type="TextureButton" parent="BackgroundPanel"]
unique_name_in_owner = true
margin_top = 34.0
margin_right = 64.0
margin_bottom = 50.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 2 )

[node name="ItemTwoDisplay" parent="BackgroundPanel/ItemTwoButton" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 3.0
margin_right = -52.0
margin_bottom = -3.0
mouse_filter = 1

[node name="ContinueButton" type="TextureButton" parent="BackgroundPanel"]
margin_left = 15.0
margin_top = 53.0
margin_right = 47.0
margin_bottom = 61.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )

[connection signal="pressed" from="BackgroundPanel/ItemOneButton" to="." method="_on_ItemOneButton_pressed"]
[connection signal="pressed" from="BackgroundPanel/ItemTwoButton" to="." method="_on_ItemTwoButton_pressed"]
